# BlitzNet

./: BlitzNet  BlitzNetTests  CMakeLists.txt  NeuralNet  NeuralNetTests  README.md
include/: ActivationFunction.h  Layer.h  LossFunction.h  Model.h  Network.h  Node.h  Utility.h
src/: main  main.cpp
tests/: test_main.cpp
